# the-eye

./: .dockerignore  .gitignore  Dockerfile  README.md  celeryworker.dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml  start-celery.sh
ext/: restplus.py
src/: __init__.py  app.py  celery_worker.py  settings.toml  setup.py
src/contrib/: env-sample
src/events/: settings.toml
src/events/adapters/: __init__.py  api_model.py  celery.py  database.py  orm.py  queue.py  repository.py  rest_lib.py
src/events/domain/: model.py
src/events/entrypoints/: __init__.py  flask_app.py
src/events/factory/: app.py
src/events/services/: service_layer.py  unit_of_work.py
src/events/tasks/: process_event.py
src/migrations/: env.py
src/migrations/versions/: 521b65435f58_initial_migration.py
src/tests/: conftest.py  pytest.ini  test_data.py  test_e2e_service_events.py  test_integration_service_events.py  test_unit_domain_events.py  test_unit_endpoint_events.py  test_unit_service_events.py
